prevents breaking in the middle of names on mobile

--- a/pages/ourteam/css/styles.css
+++ b/pages/ourteam/css/styles.css
@@ -35,4 +35,7 @@
     .card:hover .card-img-overlay {
         opacity: 0;
     }
+    .card-title {
+		word-wrap: normal;
+	}
 }
